# OpKAN

./: .gitignore  GEMINI.md  README.md  pyproject.toml
config/: heston_defaults.yaml
data/: telemetry.json
docs/: POLISH.md
docs/paper/: architectural_deep_dive.aux  architectural_deep_dive.bbl  architectural_deep_dive.blg  architectural_deep_dive.out  architectural_deep_dive.tex  architectural_deep_dive.toc  opkan_class_draft.bbl  opkan_class_draft.tex  opkan_v2.aux  opkan_v2.bbl  opkan_v2.blg  opkan_v2.out  opkan_v2.tex  opkan_v2.tex.bak  opkan_v2.toc  opkan_v3.tex  opkan_v4.tex  opkan_v5.bbl  opkan_v5.tex  references.bib
docs/prd/: dual_process_thinking.md  terminal_telemetry_ui.md
docs/prior_paper/: LLM_SPIKAN_PAPER_DRAFT.aux  LLM_SPIKAN_PAPER_DRAFT.bbl  LLM_SPIKAN_PAPER_DRAFT.blg  LLM_SPIKAN_PAPER_DRAFT.fdb_latexmk  LLM_SPIKAN_PAPER_DRAFT.fls  LLM_SPIKAN_PAPER_DRAFT.out  OPTIONS_SPIKAN_EVIDENCE_UPDATE.aux  OPTIONS_SPIKAN_EVIDENCE_UPDATE.fdb_latexmk  OPTIONS_SPIKAN_EVIDENCE_UPDATE.fls  OPTIONS_SPIKAN_EVIDENCE_UPDATE.out
models/: pikan_heston.pt
scripts/: backtest_pikan.py  benchmark_dual_process.py  benchmark_h200.py  fine_tune_liuclaw.py  gen_market_sim.py  gen_synthetic_opra.py  launch_opkan.py  live_session.py  start_vllm.sh  validate_e2e.py
src/: config.py
src/agent/: client.py  core.py  data_collector.py  dsl.py  fallback.py  prompts.py
src/data/: dataset.py  iv_solver.py  parser.py  surface.py
src/engine/: coordinator.py  queues.py  telemetry.py
src/features/: extractor.py  pca_reducer.py
src/ui/: dashboard.py
tests/: test_heston_pde.py
(+69 files in other folders)
